--- a/_layouts/normal.html
+++ b/_layouts/normal.html
@@ -13,7 +13,7 @@
 			{{content}}
 		</div>
         <div class="pie">
-            (C) Nacho Iborra - I.E.S. San Vicente
+            (C) May Calle - I.E.S. San Vicente
         </div>        
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 	</body>
