--- a/css/normal.css
+++ b/css/normal.css
@@ -1,14 +1,14 @@
 body
 {
     background-color: #8a4fff;
-    color: white;
-   
+    color: black;   
 }
 
 .titulo
 {
     margin-top: 20px;
     margin-bottom: 20px;
+    color: white;
     text-align: justify;
 }
 
