--- a/css/normal.css
+++ b/css/normal.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: #8a4fff;
+    background-color: linear-gradient(top, #c3bef7, #effffa);
     color: black;   
 }
 
@@ -8,7 +8,8 @@ body
 {
     margin-top: 20px;
     margin-bottom: 20px;
-    color: white;
+    text-shadow: 5px 5px 5px white ;
+    color: #8a4fff;
     text-align: justify;
 }
 
