--- a/css/normal.css
+++ b/css/normal.css
@@ -1,21 +1,21 @@
 body
 {
-    background-color: linear-gradient(top, #c3bef7, #effffa);
+    background-color: linear-gradient(to bottom, #c3bef7, #effffa);
     color: black;   
 }
 
 .titulo
 {
     margin-top: 20px;
-    margin-bottom: 20px;
-    text-shadow: 5px 5px 5px white ;
-    color: #8a4fff;
+    margin-bottom: 20px;    
     text-align: justify;
 }
 
 .logo {
     padding-top: 20px;
     text-align: center;
+    text-shadow: 5px 5px 5px white ;
+    color: #8a4fff;
 }
 
 h1
