cambiando los colores

--- a/css/normal.css
+++ b/css/normal.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: linear-gradient(to bottom, #c3bef7, #effffa);
+    background-image: linear-gradient(to bottom, #c3bef7, #effffa);
     color: black;   
 }
 
