--- a/css/normal.css
+++ b/css/normal.css
@@ -1,7 +1,11 @@
+html {
+    height: 100%;
+}
 body
 {
     background-image: linear-gradient(to bottom, #c3bef7, #effffa);
     color: black;   
+    min-height: 100%;
 }
 
 .titulo
