--- a/css/normal.css
+++ b/css/normal.css
@@ -1,6 +1,7 @@
 html {
     height: 100%;
 }
+
 body
 {
     background-image: linear-gradient(to bottom, #c3bef7, #effffa);
@@ -17,15 +18,15 @@ body
 
 .logo {
     padding-top: 20px;
-    text-align: center;
-    text-shadow: 5px 5px 5px white ;
-    color: #8a4fff;
+    text-align: center;    
 }
 
 h1
 {
     margin-top: 20px;
     margin-bottom: 20px;
+    text-shadow: 5px 5px 5px white ;
+    color: #8a4fff;
 }
 
 .celda
@@ -35,6 +36,7 @@ h1
     text-align: center;
     height: 100%;
     color: black;
+    border: 1px solid #8a4fff;
 }
 
 .celda a, .celda a:hover, .celda a:link, .celda a:visited
